--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Quick, <b>easy</b> and tasty Macaroni and cheese dish. Fancy designer mac and cheese often cost forty or <i>fifty</i> dollars to prepare when you have so many exotic and expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasy.</p>
     <img src="images/home-page.jpg" alt="macaroni and cheese">
     <a href="pages/ingredients.html"><h2>Ingredients for Macaroni and cheese</h2></a>
-    <a href="pages/how-to-make.html"><h2>How to make Macaroni and cheese</h2></a>
+    <a href="https://goaline.xyz"><h2>How to make Macaroni and cheese</h2></a>
     <a href="pages/contact-me.html">Contact me now</a>
   </body>
 </html>
